--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/app",
+    "public": "dist/szakdolgozat-alkalmazas",
     "ignore": [
       "firebase.json",
       "**/.*",
