--- a/firebase.json
+++ b/firebase.json
@@ -19,5 +19,17 @@
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
+  },
+  "emulators": {
+    "firestore": {
+      "port": 5033
+    },
+    "hosting": {
+      "port": 5034
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
   }
 }
