--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@firebase/app-types": "^0.9.0",
+    "@firebase/auth-types": "^0.12.0",
+    "@firebase/firestore-types": "^3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.6",
+    "@types/firebase": "^3.2.1",
     "bootstrap": "^5.2.3",
+    "firebase": "^10.4.0",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
