--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@popperjs/core": "^2.11.6",
     "@types/firebase": "^3.2.1",
     "bootstrap": "^5.2.3",
-    "firebase": "^10.4.0",
+    "firebase": "^10.5.2",
+    "firebase-admin": "^11.11.0",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
