--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.12",
     "@angular/core": "^16.2.12",
-    "@angular/fire": "github:angular/fire",
+    "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.2.12",
     "@angular/material": "^16.2.12",
     "@angular/material-moment-adapter": "^16.2.12",
