--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.6",
+    "@swimlane/ngx-charts": "^20.5.0",
     "@types/webpack-env": "^1.18.4",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
@@ -44,6 +45,9 @@
     "@angular-devkit/build-angular": "^16.2.10",
     "@angular/compiler-cli": "^16.2.12",
     "@angular/localize": "^16.2.12",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-selection": "^3.0.10",
+    "@types/d3-shape": "^3.1.6",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
