--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.10",
+    "@angular-devkit/build-angular": "^16.2.12",
     "@angular/compiler-cli": "^16.2.12",
     "@angular/localize": "^16.2.12",
     "@types/d3-scale": "^4.0.8",
@@ -57,7 +57,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "webpack-dev-middleware": "^7.1.1"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 15.2.7.",
   "main": "index.js",
